# fslpy

./: .coveragerc  .dir-locals.el  .gitignore  .gitlab-ci.yml  .pylintrc  AUTHOR  CHANGELOG.rst  LICENSE  MANIFEST.in  README  README.md  README.rst  TODO  betDemo.py  conftest.py  featDemo.py  fsl.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-extra.txt  requirements.txt  runshell.py  setup.cfg  setup.py  test.py  testBuild.py
.ci/: build_conda_dist.sh  build_doc.sh  build_pypi_dist.sh  check_version.sh  deploy_conda.sh  deploy_doc.sh  deploy_pypi.sh  patch_version.sh  setup_ssh.sh  test_template.sh  zenodo_deposit.sh  zenodo_meta.json.jinja2
.conda/: conda_build_config.yaml  meta.yaml  post-link.sh  pre-unlink.sh
apidoc/: conf.py  fsl.data.atlases.rst  fsl.data.constants.rst  fsl.data.featimage.rst  fsl.data.featresults.rst  fsl.data.image.rst  fsl.data.strings.rst  fsl.fsleyes.actions.copyoverlay.rst  fsl.fsleyes.actions.loadcolourmap.rst  fsl.fsleyes.actions.openfile.rst  fsl.fsleyes.actions.openstandard.rst  fsl.fsleyes.actions.rst  fsl.fsleyes.actions.saveoverlay.rst  fsl.fsleyes.colourmaps.rst  fsl.fsleyes.controls.atlasinfopanel.rst  fsl.fsleyes.controls.atlasoverlaypanel.rst  fsl.fsleyes.controls.atlaspanel.rst  fsl.fsleyes.controls.canvassettingspanel.rst  fsl.fsleyes.controls.clusterpanel.rst  fsl.fsleyes.controls.histogramcontrolpanel.rst  fsl.fsleyes.controls.histogramlistpanel.rst  fsl.fsleyes.controls.lightboxtoolbar.rst  fsl.fsleyes.controls.locationpanel.rst  fsl.fsleyes.controls.lookuptablepanel.rst  fsl.fsleyes.controls.melodicclassificationgrid.rst  fsl.fsleyes.controls.melodicclassificationpanel.rst  fsl.fsleyes.controls.orthoedittoolbar.rst  fsl.fsleyes.controls.orthotoolbar.rst  fsl.fsleyes.controls.overlaydisplaypanel.rst  fsl.fsleyes.controls.overlaydisplaytoolbar.rst  fsl.fsleyes.controls.overlayinfopanel.rst  fsl.fsleyes.controls.overlaylistpanel.rst  fsl.fsleyes.controls.rst  fsl.fsleyes.controls.shellpanel.rst  fsl.fsleyes.controls.timeseriescontrolpanel.rst  fsl.fsleyes.displaycontext.canvasopts.rst  fsl.fsleyes.displaycontext.display.rst  fsl.fsleyes.displaycontext.displaycontext.rst  fsl.fsleyes.displaycontext.group.rst  fsl.fsleyes.displaycontext.labelopts.rst  (+116 more)
doc/: changelog.rst  conf.py  contributing.rst  fsl.data.atlases.rst  fsl.data.bitmap.rst  fsl.data.cifti.rst  fsl.data.constants.rst  fsl.data.dicom.rst  fsl.data.dtifit.rst  fsl.data.featanalysis.rst  fsl.data.featdesign.rst  fsl.data.featimage.rst  fsl.data.featresults.rst  fsl.data.fixlabels.rst  fsl.data.freesurfer.rst  fsl.data.gifti.rst  fsl.data.image.rst  fsl.data.imagewrapper.rst  fsl.data.melodicanalysis.rst  fsl.data.melodicimage.rst  fsl.data.melodiclabels.rst  fsl.data.melodicresults.rst  fsl.data.mesh.rst  fsl.data.mghimage.rst  fsl.data.model.rst  fsl.data.rst  fsl.data.strings.rst  fsl.data.tensorimage.rst  fsl.data.utils.rst  fsl.data.vest.rst  fsl.data.volumelabels.rst  fsl.data.vtk.rst  fsl.fsleyes.actions.openfile.rst  fsl.fsleyes.actions.openstandard.rst  (+167 more)
(+830 files in other folders)
